perf: enable Generational ZGC in Dockerfile